--- a/qml.qrc
+++ b/qml.qrc
@@ -8,5 +8,6 @@
         <file>HeaderForm.ui.qml</file>
         <file>Menu.qml</file>
         <file>Database.qml</file>
+        <file>MenuButton.qml</file>
     </qresource>
 </RCC>
