--- a/qml.qrc
+++ b/qml.qrc
@@ -9,5 +9,10 @@
         <file>Menu.qml</file>
         <file>Database.qml</file>
         <file>MenuButton.qml</file>
+        <file>lang_en_US.qm</file>
+        <file>lang_ru_RU.qm</file>
     </qresource>
+    <qresource prefix="/tr"/>
+    <qresource prefix="/tc"/>
+    <qresource prefix="/ts"/>
 </RCC>
