--- a/qml.qrc
+++ b/qml.qrc
@@ -14,6 +14,7 @@
         <file>SettingDialog.qml</file>
         <file>DictsDialog.qml</file>
         <file>OpenFileDialog.qml</file>
+        <file>StatPage.qml</file>
     </qresource>
     <qresource prefix="/tr"/>
     <qresource prefix="/tc"/>
