Word list dialog
Signed-off-by: Vadim Balakhanov <baldis@bk.ru>

--- a/qml.qrc
+++ b/qml.qrc
@@ -14,6 +14,8 @@
         <file>SettingDialog.qml</file>
         <file>DictsDialog.qml</file>
         <file>OpenFileDialog.qml</file>
+        <file>WordEditDialog.qml</file>
+        <file>WordListDialog.qml</file>
     </qresource>
     <qresource prefix="/tr"/>
     <qresource prefix="/tc"/>
